unpackaged/main/default/objects/Question__c/fields/Answer_Options__c.field-meta.xml
<CustomField>
    <fullName>Answer_Options__c</fullName>
    <label>Answer Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>