unpackaged/main/default/objects/Question__c/fields/External_Access__c.field-meta.xml
<CustomField>
    <fullName>External_Access__c</fullName>
    <defaultValue>true</defaultValue>
    <label>External Access</label>
    <type>Checkbox</type>
</CustomField>