unpackaged/main/default/objects/Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PQ</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>CQC</fullName>
            </value>
            <value>
                <fullName>RAQ</fullName>
            </value>
            <value>
                <fullName>PSQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>