unpackaged/main/default/objects/Question__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <inlineHelpText>Meant to map to legacy Litify object that has an Intake relationship</inlineHelpText>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>