unpackaged/main/default/objects/Question__c/fields/Related_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Field__c</fullName>
    <inlineHelpText>Meant to map to legacy Litify object&#39;s field</inlineHelpText>
    <label>Related Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>