unpackaged/main/default/objects/Question__c/validationRules/Required_Lookup_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Lookup_Object</fullName>
    <active>true</active>
    <description>Requires a lookup Object when Answer Type is of lookup</description>
    <errorConditionFormula>ISBLANK(Lookup_Object__c) &amp;&amp;
(
 ISPICKVAL(Answer_Type__c, &#39;Lookup&#39;) ||
 ISPICKVAL(Answer_Type__c, &#39;Multi-Record&#39;)
)</errorConditionFormula>
    <errorDisplayField>Lookup_Object__c</errorDisplayField>
    <errorMessage>You must provide a Lookup Object for Lookup Answer Types</errorMessage>
</ValidationRule>