unpackaged/main/default/objects/Question__c/validationRules/Required_Related_Object_and_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Related_Object_and_Field</fullName>
    <active>true</active>
    <description>Requires the Related Object and Field to be filled out</description>
    <errorConditionFormula>(
 ISBLANK(Related_Object__c) &amp;&amp; 
 NOT(ISBLANK(Related_Object_Field__c))
)
||
(
 ISBLANK(Related_Object_Field__c) &amp;&amp;
 NOT(ISBLANK(Related_Object__c))
)</errorConditionFormula>
    <errorDisplayField>Related_Object__c</errorDisplayField>
    <errorMessage>You must have both the Related Object and Field filled out</errorMessage>
</ValidationRule>