unpackaged/main/default/objects/Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>External_Access__c</columns>
    <columns>Answer_Type__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Question__c</columns>
    <columns>Related_Object__c</columns>
    <columns>Related_Object_Field__c</columns>
    <columns>Lookup_Object__c</columns>
    <columns>Flow_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>